--- a/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
@@ -278,7 +278,7 @@ nav ul a {
 
 .container-cleelist .wrap-list{
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 33% 33% 34%;
   padding: 10px;
 }
 
