--- a/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
@@ -1,6 +1,12 @@
 body{
   overflow: auto !important;
 }
+
+.icon-full{
+  height: 45px !important;
+  line-height: 45px !important;
+}
+
 #mapa {
   height:584px;
   width: 100%;
