reporte registros punteados
se ajusto para que sea clasificado por cgo

--- a/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
@@ -14,7 +14,8 @@ body{
   margin-top: 0px;
 }
 #mdm6DinamicPanel{
-    display: block!important
+    display: block!important;
+    visibility:initial !important;
 } 
 .swal-wide{
     width: 600px  !important;
