--- a/sare_seg/src/main/webapp/WEB-INF/reportes/reporGeogra_prueba.jrxml
+++ b/sare_seg/src/main/webapp/WEB-INF/reportes/reporGeogra_prueba.jrxml
@@ -62,6 +62,19 @@
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
+		<conditionalStyle>
+			<conditionExpression><![CDATA[new Boolean(
+
+    $F{ST_SARE}.equals("20")
+
+
+)]]></conditionExpression>
+			<style mode="Opaque" backcolor="#FFFFCC"/>
+		</conditionalStyle>
+		<conditionalStyle>
+			<conditionExpression><![CDATA[new Boolean($V{REPORT_COUNT}.intValue()%2==0)]]></conditionExpression>
+			<style backcolor="#E6E6E6"/>
+		</conditionalStyle>
 	</style>
 	<style name="table 3">
 		<box>
@@ -139,7 +152,7 @@
 	<parameter name="esquema" class="java.lang.String"/>
 	<parameter name="URL" class="java.lang.String"/>
 	<queryString>
-		<![CDATA[select CASE
+		<![CDATA[select ST_SARE,CASE
             WHEN  ue.ce ='01' THEN 'AGS'
             WHEN  ue.ce ='02' THEN 'BCN'
             WHEN  ue.ce ='03' THEN 'BCS'
@@ -177,15 +190,16 @@
 
 end ce,ue.ce cve_ce,po.cve_operativa tramo_control,cgo.descripcion cgo,ue.ID_UE,st.descripcion status,ue.e08,ue.e09,ue.E23A,ue.c154,ue.e03 cve_ent,ue.e04 cve_mun,ue.e05 cve_loc,ue.e06 cve_ageb,
 ue.e07 cve_mza,ue.tipo_e10,ue.e10 nomvial,ue.e11 numext,ue.e11a numextalf,ue.tipo_e14,ue.e14,ue.e12,ue.e19,ue.e20
-from 
+from
 ce2019_masrencal.tr_plan_oper po
 join ce2019_masrencal.tr_predios pre on pre.id_cop=po.id_cop
 join ce2019_MASRENCAL.tr_inmuebles inm on inm.id_inmueble=pre.id_inmueble
-join ce2019_MASRENCAL.tr_etq_val ue on ue.id_ue=pre.id_ue 
+join ce2019_MASRENCAL.tr_etq_val ue on ue.id_ue=pre.id_ue
 join ce2019_MASRENCAL.tc_st_sare st on pre.status_sare=st.status_sare
 join ce2019_MASRENCAL.tc_cgo cgo on pre.id_cgo=cgo.id_cgo
-where inm.id_ue is not null and ST_sare in ('10','20')  $P!{where} order by tramo_control,origen,e23a,clee_emp,id_ue,cgo.id_cgo]]>
+where inm.id_ue is not null and ST_sare in ('10','20')  AND CE='01' order by tramo_control,origen,e23a,clee_emp,id_ue,cgo.id_cgo]]>
 	</queryString>
+	<field name="ST_SARE" class="java.lang.String"/>
 	<field name="CE" class="java.lang.String"/>
 	<field name="CVE_CE" class="java.math.BigDecimal"/>
 	<field name="TRAMO_CONTROL" class="java.lang.String"/>
@@ -593,7 +607,7 @@ CONTROL	]]></text>
 	<detail>
 		<band height="28">
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="0" y="0" width="20" height="28" uuid="e1a18a2f-27d5-450a-ae42-d766a39ef8bb"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="0" y="0" width="20" height="28" uuid="e1a18a2f-27d5-450a-ae42-d766a39ef8bb"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -607,7 +621,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{CE}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="201" y="0" width="85" height="28" uuid="c4cda812-c29f-4dcd-960b-a977a13f1ea1"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="201" y="0" width="85" height="28" uuid="c4cda812-c29f-4dcd-960b-a977a13f1ea1"/>
 				<box>
 					<pen lineWidth="0.0"/>
 					<topPen lineWidth="0.5"/>
@@ -622,7 +636,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[" "+$F{E08}+" "]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="286" y="0" width="90" height="28" uuid="38cfd10f-37fa-4ecb-92ad-cc9f4d1cc134"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="286" y="0" width="90" height="28" uuid="38cfd10f-37fa-4ecb-92ad-cc9f4d1cc134"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -637,7 +651,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{E09}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="452" y="0" width="20" height="28" uuid="7518531e-a3b0-4ede-ade5-fc51c13f31c1"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="452" y="0" width="20" height="28" uuid="7518531e-a3b0-4ede-ade5-fc51c13f31c1"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -652,7 +666,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{CVE_AGEB}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="414" y="0" width="18" height="28" uuid="1fa254bd-6dd3-4fd5-a326-c0a90346b1d2"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="414" y="0" width="18" height="28" uuid="1fa254bd-6dd3-4fd5-a326-c0a90346b1d2"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -667,7 +681,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{CVE_MUN}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="100" y="0" width="61" height="28" uuid="4049580e-f867-49e1-84bf-7b08ca074dbf"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="100" y="0" width="61" height="28" uuid="4049580e-f867-49e1-84bf-7b08ca074dbf"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -681,7 +695,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{STATUS}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="376" y="0" width="20" height="28" uuid="0b173181-dbbd-48d3-8e6c-1b8d44e2ab43"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="376" y="0" width="20" height="28" uuid="0b173181-dbbd-48d3-8e6c-1b8d44e2ab43"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -696,7 +710,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{E23A}.toLowerCase()]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="432" y="0" width="20" height="28" uuid="ab05065c-d26a-4502-a6ce-7fb9f0683ca1"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="432" y="0" width="20" height="28" uuid="ab05065c-d26a-4502-a6ce-7fb9f0683ca1"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -711,7 +725,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{CVE_LOC}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="396" y="0" width="18" height="28" uuid="23940c64-0509-4131-b9cd-577cdd57a6b3"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="396" y="0" width="18" height="28" uuid="23940c64-0509-4131-b9cd-577cdd57a6b3"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -726,7 +740,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{CVE_ENT}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="472" y="0" width="20" height="28" uuid="98afe845-f1d9-4c71-9778-e945230b302c"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="472" y="0" width="20" height="28" uuid="98afe845-f1d9-4c71-9778-e945230b302c"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -741,7 +755,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{CVE_MZA}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="20" y="0" width="40" height="28" uuid="51da3b53-9b6e-476a-92ef-7fc0de332c37"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="20" y="0" width="40" height="28" uuid="51da3b53-9b6e-476a-92ef-7fc0de332c37"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -756,7 +770,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{TRAMO_CONTROL}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="161" y="0" width="40" height="28" uuid="ee5e91c3-ff9a-4585-945a-6e81413b9b22"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="161" y="0" width="40" height="28" uuid="ee5e91c3-ff9a-4585-945a-6e81413b9b22"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -770,7 +784,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{ID_UE}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="60" y="0" width="40" height="28" uuid="a5538b80-af77-41f1-b1e6-99684a1bf373"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="60" y="0" width="40" height="28" uuid="a5538b80-af77-41f1-b1e6-99684a1bf373"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -784,7 +798,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{CGO}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="492" y="0" width="20" height="28" uuid="be1ebb2c-40b6-477d-8c26-617fd20bea87"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="492" y="0" width="20" height="28" uuid="be1ebb2c-40b6-477d-8c26-617fd20bea87"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -799,7 +813,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{TIPO_E10}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="512" y="0" width="60" height="28" uuid="ba6853c0-ac37-4b10-abc0-276fbcaeb26d"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="512" y="0" width="60" height="28" uuid="ba6853c0-ac37-4b10-abc0-276fbcaeb26d"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -814,7 +828,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{NOMVIAL}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="572" y="0" width="20" height="28" uuid="b108a6c4-a5fb-4004-9d7b-883050dbc199"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="572" y="0" width="20" height="28" uuid="b108a6c4-a5fb-4004-9d7b-883050dbc199"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -829,7 +843,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{NUMEXT}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="592" y="0" width="20" height="28" uuid="f08566d0-ed32-4384-bd60-a80b2fa6d74b"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="592" y="0" width="20" height="28" uuid="f08566d0-ed32-4384-bd60-a80b2fa6d74b"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -844,7 +858,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{NUMEXTALF}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="612" y="0" width="20" height="28" uuid="770f5d8a-8f45-401e-89f0-dea0d85606e8"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="612" y="0" width="20" height="28" uuid="770f5d8a-8f45-401e-89f0-dea0d85606e8"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -859,7 +873,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{TIPO_E14}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="632" y="0" width="55" height="28" uuid="9a1a853d-5cdb-44a4-8f80-35d670d77587"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="632" y="0" width="55" height="28" uuid="9a1a853d-5cdb-44a4-8f80-35d670d77587"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -874,7 +888,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{E14}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="687" y="0" width="30" height="28" uuid="6dae58d2-4d19-4302-b42b-82d810aab142"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="687" y="0" width="30" height="28" uuid="6dae58d2-4d19-4302-b42b-82d810aab142"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -889,7 +903,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{E12}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="717" y="0" width="55" height="28" uuid="df927723-6eb0-4143-b415-ccfe458dd3a1"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="717" y="0" width="55" height="28" uuid="df927723-6eb0-4143-b415-ccfe458dd3a1"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -904,7 +918,7 @@ CONTROL	]]></text>
 				<textFieldExpression><![CDATA[$F{E19}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="table_TD_2" stretchType="RelativeToTallestObject" x="772" y="0" width="30" height="28" uuid="9a8d6cc9-eecb-41f0-9f35-3e0114c1c91f"/>
+				<reportElement style="table 2_TD" stretchType="RelativeToTallestObject" x="772" y="0" width="30" height="28" uuid="9a8d6cc9-eecb-41f0-9f35-3e0114c1c91f"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
