reporte de pendientes de punteo
se le cambio la condicion de poner en color amarillo las ue que estan bloqueadas

--- a/sare_seg/src/main/webapp/WEB-INF/reportes/reporGeogra_prueba.jrxml
+++ b/sare_seg/src/main/webapp/WEB-INF/reportes/reporGeogra_prueba.jrxml
@@ -64,10 +64,7 @@
 		</box>
 		<conditionalStyle>
 			<conditionExpression><![CDATA[new Boolean(
-
-    $F{ST_SARE}.equals("20")
-
-
+( new Integer($F{ST_SARE})==20 ? true : false )
 )]]></conditionExpression>
 			<style mode="Opaque" backcolor="#FFFFCC"/>
 		</conditionalStyle>
