e11_A, validaciones desde back
se esta trabajando para que las validaciones sean desde el back y no desde el front, de igual forma se valido el campo numero exterior ya que no se mostraba en el formulario

--- a/sare_seg/src/main/webapp/WEB-INF/resource/templates/preview.html
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/templates/preview.html
@@ -111,8 +111,8 @@
   <div class="row container-campos">
     <div class="col s6 m3 wrap-titulo-campo"> <label for="e11_pv">N&uacute;mero exterior E11:</label> </div>
     <div class="col s6 m3 wrap-info-campo"> <span class="vistaprevia" id="e11_pv"></span> </div>
-    <div class="col s6 m3 wrap-titulo-campo"> <label for="e11_a_pv">Letra E11_A:</label> </div>
-    <div class="col s6 m3 wrap-info-campo"> <span class="vistaprevia" id="e11_a_pv"></span> </div>
+    <div class="col s6 m3 wrap-titulo-campo"> <label for="e11A_pv">Letra E11_A:</label> </div>
+    <div class="col s6 m3 wrap-info-campo"> <span class="vistaprevia" id="e11A_pv"></span> </div>
   </div>
 
   <div class="row container-campos">
